--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^2.0.2",
     "oauth2-server": "^3.0.1",
     "pug": "2.0.0-beta11",
-    "sha3": "^2.1.2"
+    "sha3": "^2.1.2",
+    "winston": "^3.2.1"
   }
 }
