--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "aes-js": "^3.1.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -18,6 +19,8 @@
     "node-oauth2-server-mongo-example": "^1.2.1",
     "nodemon": "^2.0.2",
     "oauth2-server": "^3.0.1",
+    "passport": "^0.4.1",
+    "passport-google-token": "^0.1.2",
     "pug": "^2.0.4",
     "sha3": "^2.1.2",
     "winston": "^3.2.1"
