--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "aes-js": "^3.1.2",
+    "argon2": "^0.26.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
