--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ deploy:
 before_script:
   - cd BackEnd
 before_install:
-  - openssl aes-256-cbc -K $encrypted_7f5be34d66f0_key -iv $encrypted_7f5be34d66f0_iv -in Secret.js.enc -out Secret.js -d
+  - openssl aes-256-cbc -K $encrypted_7f5be34d66f0_key -iv $encrypted_7f5be34d66f0_iv -in BackEnd/Secret.js.enc -out BackEnd/Secret.js -d
