--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ deploy:
     all_branches: true
 before_install:
   - cd BackEnd
-before_deploy:
   - openssl aes-256-cbc -K $encrypted_7f5be34d66f0_key -iv $encrypted_7f5be34d66f0_iv -in Secret.js.enc -out Secret.js -d
+before_deploy:
+  - rm ../.gitignore
 
