--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ before_install:
   - openssl aes-256-cbc -K $encrypted_7f5be34d66f0_key -iv $encrypted_7f5be34d66f0_iv -in Secret.js.enc -out Secret.js -d
 before_deploy:
   - rm ../.gitignore
+  - git add Secret.js
 
