--- a/zarahealth/package.json
+++ b/zarahealth/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.1.2",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
+    "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
     "history": "^4.10.1",
     "react": "^16.13.1",
