--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -9,6 +9,7 @@
     "aes-js": "^3.1.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "^4.16.4",
     "express-graphql": "^0.9.0",
