--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -25,5 +25,10 @@
     "pug": "^2.0.4",
     "sha3": "^2.1.2",
     "winston": "^3.2.1"
+  },
+  "devDependencies": {
+    "jasmine": "^3.5.0",
+    "mongodb-memory-server": "^6.5.2",
+    "request": "^2.88.2"
   }
 }
