--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "express-graphql": "^0.9.0",
     "graphql": "^14.6.0",
+    "graphql-upload": "^10.0.0",
     "http-errors": "~1.6.3",
     "mongoose": "^5.9.6",
     "morgan": "~1.9.1",
