--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -25,6 +25,7 @@
     "passport": "^0.4.1",
     "passport-google-token": "^0.1.2",
     "pug": "^2.0.4",
+    "request-promise": "^4.2.5",
     "sha3": "^2.1.2",
     "winston": "^3.2.1"
   },
