--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -17,16 +17,21 @@
     "graphql": "^14.6.0",
     "graphql-upload": "^10.0.0",
     "http-errors": "~1.6.3",
+    "lodash": "^4.17.15",
     "mongoose": "^5.9.6",
     "morgan": "~1.9.1",
+    "node-fetch": "^2.6.0",
     "node-oauth2-server-mongo-example": "^1.2.1",
     "nodemon": "^2.0.2",
+    "npm": "^6.14.4",
     "oauth2-server": "^3.0.1",
     "passport": "^0.4.1",
     "passport-google-token": "^0.1.2",
     "pug": "^2.0.4",
     "request-promise": "^4.2.5",
     "sha3": "^2.1.2",
+    "sparql-http-client": "^2.2.2",
+    "transform-coordinates": "^0.1.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
