--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -31,6 +31,7 @@
     "sha3": "^2.1.2",
     "sparql-http-client": "^2.2.2",
     "transform-coordinates": "^0.1.0",
+    "underscore": "^1.10.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
