--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -20,11 +20,14 @@
     "lodash": "^4.17.15",
     "mongoose": "^5.9.6",
     "morgan": "~1.9.1",
+    "node-cache": "^5.1.0",
     "node-fetch": "^2.6.0",
     "node-oauth2-server-mongo-example": "^1.2.1",
+    "node-schedule": "^1.3.2",
     "nodemon": "^2.0.2",
     "npm": "^6.14.4",
     "oauth2-server": "^3.0.1",
+    "openweather-apis": "^4.2.0",
     "passport": "^0.4.1",
     "passport-google-token": "^0.1.2",
     "pug": "^2.0.4",
