--- a/zarahealth/package.json
+++ b/zarahealth/package.json
@@ -12,14 +12,18 @@
     "apollo-client": "^2.6.8",
     "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
+    "chart.js": "^2.9.3",
     "history": "^4.10.1",
+    "mapbox-gl": "^1.9.1",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-tap-or-click": "^0.2.1",
-    "rxjs": "^6.5.5"
+    "rxjs": "^6.5.5",
+    "minimist": "^1.2.5"
   },
   "scripts": {
     "start": "react-scripts start",
