--- a/zarahealth/package.json
+++ b/zarahealth/package.json
@@ -3,27 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-components": "^3.1.5",
+    "@apollo/react-hooks": "^3.1.5",
     "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "apollo-cache-inmemory": "^1.6.5",
+    "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.6.8",
+    "apollo-link": "^1.2.14",
     "apollo-link-context": "^1.0.20",
+    "apollo-link-error": "^1.1.13",
     "apollo-link-http": "^1.5.17",
+    "apollo-link-token-refresh": "^0.2.7",
     "chart.js": "^2.9.3",
+    "graphql": "^15.0.0",
+    "graphql-tag": "^2.10.3",
     "history": "^4.10.1",
-    "mapbox-gl": "^1.9.1",
+    "mapbox-gl": "^1.10.0",
+    "minimist": "^1.2.5",
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.3",
+    "react-hook-form": "^5.6.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-tap-or-click": "^0.2.1",
-    "rxjs": "^6.5.5",
-    "minimist": "^1.2.5"
+    "react-tap-or-click": "^0.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
