add: weather icon and temperature

--- a/zarahealth/package.json
+++ b/zarahealth/package.json
@@ -34,6 +34,7 @@
     "react-tap-or-click": "^0.2.1"
   },
   "scripts": {
+    "svgr": "svgr -d src/ui/shared/Icons/ assets/",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -53,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@svgr/cli": "^5.4.0"
   }
 }
