--- a/zarahealth/package.json
+++ b/zarahealth/package.json
@@ -22,6 +22,7 @@
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
     "history": "^4.10.1",
+    "luxon": "^1.24.1",
     "mapbox-gl": "^1.10.0",
     "minimist": "^1.2.5",
     "react": "^16.13.1",
