--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -19,6 +19,7 @@
     "http-errors": "~1.6.3",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.6",
+    "mongoose-paginate-v2": "^1.3.9",
     "morgan": "~1.9.1",
     "node-cache": "^5.1.0",
     "node-fetch": "^2.6.0",
