--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon app.js",
-    "test": "jasmine"
+    "test": "jasmine spec/User/ClientSpec.js && jasmine spec/User/AdminSpec.js"
   },
   "dependencies": {
     "aes-js": "^3.1.2",
