--- a/zarahealth/package.json
+++ b/zarahealth/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.3",
     "react-hook-form": "^5.6.1",
+    "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-tap-or-click": "^0.2.1"
