--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,26 +16,13 @@ jobs:
       with:
         node-version: '12'
     - run: npm install
+      working-directory: zarahealth
     - run: npm run build
-    - name: Upload web release as artifact
-      uses: actions/upload-artifact@v1
-      with:
-        name: public
-        path: build
-  
-  deploy:
-    name: Deploy to Firebase
-    needs: [build]
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v1
-    - uses: actions/download-artifact@v1
-      with:
-        name: public
-        path: firebase/public
+      working-directory: zarahealth
     - name: Deploy to Firebase
       uses: w9jds/firebase-action@master
       with:
         args: deploy --only hosting
       env:
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+        PROJECT_PATH: zarahealth
