--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "express": "^4.16.4",
     "express-graphql": "^0.9.0",
+    "firebase-admin": "^8.12.1",
     "graphql": "^14.6.0",
     "graphql-tools": "^5.0.0",
     "graphql-upload": "^10.0.0",
