--- a/zarahealth/package.json
+++ b/zarahealth/package.json
@@ -19,6 +19,7 @@
     "apollo-link-http": "^1.5.17",
     "apollo-link-token-refresh": "^0.2.7",
     "chart.js": "^2.9.3",
+    "firebase": "^7.14.6",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
     "history": "^4.10.1",
