--- a/zarahealth/package.json
+++ b/zarahealth/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.3",
     "react-hook-form": "^5.6.1",
+    "react-images-upload": "^1.2.8",
     "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
