--- a/zarahealth/package.json
+++ b/zarahealth/package.json
@@ -18,6 +18,7 @@
     "apollo-link-error": "^1.1.13",
     "apollo-link-http": "^1.5.17",
     "apollo-link-token-refresh": "^0.2.7",
+    "apollo-upload-client": "^13.0.0",
     "chart.js": "^2.9.3",
     "firebase": "^7.14.6",
     "graphql": "^15.0.0",
